<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Example4</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="image_msg">image_msg</string>
    <string name="plaintexthint_msg">Room number</string>
    <string name="Password_msg">Password_msg</string>
    <string name="button_msg">SCAN WIFI DATA</string>
    <string name="button_msg_2">MOTION DETECTION DATA</string>
    <string name="plaintexthint_msg2">eg:689</string>
    <string name="version_name">TU Delft Beta 1.0.1</string>
    <string name="motion_detection">MOTION DETECTION</string>
    <string name="close_window">CLOSE WINDOW</string>
    <string name="scan_wifi">SCAN WIFI</string>
    <string name="stop_scan">STOP SCAN</string>


    <string name="textview">TextView</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="XValue">0.0</string>
    <string name="YValue">0.0</string>
    <string name="ZValue">0.0</string>
    <string name="Title">Motion Detection</string>
    <string name="select_your_current_motion">Select your current motion</string>
    <string name="Measure_Data">Measure_Data</string>
    <string name="Lab2">lab2</string>
    <string name="button_msg_3">START</string>

</resources>
